1. simplified column created for variety

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -6964,20 +6964,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 204,
    "id": "6068eeaa",
    "metadata": {},
    "outputs": [],
    "source": [
     "corrected_processing_methods = {\n",
-    "    'Washed / Wet ':'Washed',\n",
+    "    'Washed / Wet':'Washed',\n",
     "    'WASHED':'Washed',\n",
     "    'DEEP WASHED':'Washed',\n",
     "    \n",
+    "    'Natural / Dry':'Natural',\n",
+    "    'Natural Fermentation / Sundried':'Natural',\n",
     "    \n",
+    "    'Pulped natural / honey': 'Honey',\n",
+    "    'Honey Process': 'Honey',\n",
     "    \n",
+    "    'Semi-washed / Semi-pulped':'Semi-Washed',\n",
     "    \n",
+    "    '48H fermented aerobic - dried on african beds (20 days': 'Aerobic Fermentation',\n",
+    "    '48H fermented aerobic - dried in Dark Room (60 days)': 'Aerobic Fermentation',\n",
+    "    'Aerobic natural': 'Aerobic Fermentation',\n",
+    "    \n",
+    "    'Anaerobic Natural': 'Anaerobic Fermentation',\n",
+    "    'Anaerobic Honey': 'Anaerobic Fermentation',\n",
+    "    'Fermented in barrels with figs 4days': 'Anaerobic Fermentation',\n",
+    "    \n",
+    "    'Wash Carbonic Process': 'Carbonic Maceration',\n",
+    "    \n",
+    "    'intrinsic cherry': 'Other',\n",
+    "    'Other': 'Other',\n",
+    "    'Wild Luwak & Dry Hull': 'Other',\n",
+    "    'Dynamic Cherry': 'Other',\n",
     "    }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "id": "af7616ac",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Processing.Method\n",
+       "Washed                    901\n",
+       "Natural                   338\n",
+       "Honey                      88\n",
+       "Semi-Washed                51\n",
+       "Other                      26\n",
+       "Aerobic Fermentation        4\n",
+       "Anaerobic Fermentation      3\n",
+       "Carbonic Maceration         2\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['Processing.Method'] = df['Processing.Method'].replace(corrected_processing_methods)\n",
+    "df['Processing.Method'] = df['Processing.Method'].str.strip()\n",
+    "display(df['Processing.Method'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9afc6e6",
+   "metadata": {},
+   "source": [
+    "## Transform Variety and create simplified column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "id": "4bd3b029",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option(\"display.max_rows\", 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "id": "029a40ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variety\n",
+       "Typica                                                                                               268\n",
+       "Bourbon                                                                                              242\n",
+       "Caturra                                                                                              219\n",
+       "Catimor                                                                                              100\n",
+       "Other                                                                                                 94\n",
+       "Catuai                                                                                                72\n",
+       "Gesha                                                                                                 63\n",
+       "Mundo Novo                                                                                            34\n",
+       "Hawaiian Kona                                                                                         33\n",
+       "SL28                                                                                                  28\n",
+       "Yellow Bourbon                                                                                        24\n",
+       "SL14                                                                                                  23\n",
+       "Sumatra                                                                                               23\n",
+       "SL34                                                                                                  16\n",
+       "Pacas                                                                                                 11\n",
+       "Ethiopian Heirlooms                                                                                   10\n",
+       "Java                                                                                                  10\n",
+       "Pacamara                                                                                               9\n",
+       "Ethiopian Yirgacheffe                                                                                  7\n",
+       "Mixed: unknown variety                                                                                 6\n",
+       "Sumatra Lintong                                                                                        5\n",
+       "Arusha                                                                                                 5\n",
+       "Arabica                                                                                                5\n",
+       "Mixed: Typica, Bourbon, Catimor                                                                        4\n",
+       "Blue Mountain                                                                                          4\n",
+       "Castillo                                                                                               4\n",
+       "Peaberry                                                                                               3\n",
+       "other                                                                                                  3\n",
+       "THA1                                                                                                   3\n",
+       "Sarchimor                                                                                              3\n",
+       "TN9-TN10                                                                                               3\n",
+       "SHG                                                                                                    3\n",
+       "Other: unknown variety                                                                                 3\n",
+       "Mandheling                                                                                             3\n",
+       "Bourbon, Catimor                                                                                       2\n",
+       "Mixed                                                                                                  2\n",
+       "mix                                                                                                    2\n",
+       "Caturra/Catuai                                                                                         2\n",
+       "Catimor ,Typica, Bourbon                                                                               2\n",
+       "Typica XL28                                                                                            2\n",
+       "Geisha, Maragogipe, Pacamara, Bourbon Red, orange and Pink, SL28, Catuai, Yellow Catuai, Caturra.      2\n",
+       "Ruiru 11                                                                                               2\n",
+       "CASTILLO-CATURRA-COLOMBIA                                                                              2\n",
+       "Syrina                                                                                                 2\n",
+       "Sulawesi                                                                                               2\n",
+       "Gayo                                                                                                   2\n",
+       "Heirloom Yirgacheffe Varietal                                                                          2\n",
+       "various                                                                                                1\n",
+       "Blend                                                                                                  1\n",
+       "Pau Brasil                                                                                             1\n",
+       "Catuai, Caturra                                                                                        1\n",
+       "Mix Variety                                                                                            1\n",
+       "USDA 762 & Kartika2                                                                                    1\n",
+       "Aranãs                                                                                                 1\n",
+       "50%Geisha,50%Bourbon                                                                                   1\n",
+       "Kumie, Diga & Wilsho                                                                                   1\n",
+       "60%Typica,40%Bourbon                                                                                   1\n",
+       "Arabica(mixed varieties)                                                                               1\n",
+       "THA                                                                                                    1\n",
+       "Castillo, Colombia, Caturra                                                                            1\n",
+       "60%Geisha ,40%Typica                                                                                   1\n",
+       "Lini S, Typica Mixed                                                                                   1\n",
+       "Santos                                                                                                 1\n",
+       "S795                                                                                                   1\n",
+       "Cutai, Mundo novo                                                                                      1\n",
+       "Catimor & HdT                                                                                          1\n",
+       "Mixed variety: Caturra, Bourbon, Catimor                                                               1\n",
+       "Pink Bourbon                                                                                           1\n",
+       "Castillo, Colombia                                                                                     1\n",
+       "Catimor, Typica, Bourbon                                                                               1\n",
+       "Marigojipe                                                                                             1\n",
+       "Ancient Typica                                                                                         1\n",
+       "Bourbon x Geisha                                                                                       1\n",
+       "Bourbon, Typica                                                                                        1\n",
+       "74110、74112、74165                                                                                      1\n",
+       "Typica+ Geisha                                                                                         1\n",
+       "Mixed: Typica, Bourbon, Catimor, Catuai                                                                1\n",
+       "Venecia                                                                                                1\n",
+       "Mixed:Typica, Bourbon, Catimor, Caturra, Java                                                          1\n",
+       "IPR107 Syrina                                                                                          1\n",
+       "Bourbon, Typica, Catimor                                                                               1\n",
+       "Mixed: Typica, Bourbon                                                                                 1\n",
+       "Typica, Catimor, Bourbon                                                                               1\n",
+       "Mixed Variety: Typica, Bourbon, Catuai, Caturra                                                        1\n",
+       "90%Typica,10%Geisha                                                                                    1\n",
+       "Kurume                                                                                                 1\n",
+       "Colombia - Castillo                                                                                    1\n",
+       "Catimor mix and varieties                                                                              1\n",
+       "60%SL34,40%Yellow Bourbon                                                                              1\n",
+       "Castillo/Caturra                                                                                       1\n",
+       "Catuai, Mundo Novo                                                                                     1\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['Variety'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 228,
+   "id": "e1787bc7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "map_varaiety = {\n",
+    "   **dict.fromkeys([\n",
+    "        'Typica','Bourbon','Caturra','Pacas',\n",
+    "        'Yellow Bourbon','Pink Bourbon','Maragogipe',\n",
+    "        'Ancient Typica','Java','Typica XL28'\n",
+    "    ], 'Foundational/Mutation'),\n",
+    "\n",
+    "    **dict.fromkeys([\n",
+    "        'Mundo Novo','Catuai','Catimor','Colombia - Castillo',\n",
+    "        'Pacamara','Sarchimor','Ruiru 11',\n",
+    "        'Bourbon x Geisha','Catimor & HdT'\n",
+    "    ], 'Hybrid'),\n",
+    "\n",
+    "    **dict.fromkeys(['Gesha','Geisha'], 'Geisha'),\n",
+    "\n",
+    "    **dict.fromkeys(['SL28','SL34','SL14'], 'SL-Selection'),\n",
+    "\n",
+    "    **dict.fromkeys([\n",
+    "        'Hawaiian Kona','Blue Mountain','Sumatra','Sumatra Lintong',\n",
+    "        'Mandheling','Arusha','Sulawesi','Gayo','Santos'\n",
+    "    ], 'Specialty Regional'),\n",
+    "\n",
+    "    **dict.fromkeys([\n",
+    "        'Ethiopian Heirlooms','Yirgacheffe',\n",
+    "        'Heirloom Yirgacheffe Varietal'\n",
+    "    ], 'Ethiopian Heirloom'),\n",
+    "\n",
+    "    **dict.fromkeys([\n",
+    "        'Mixed: unknown variety','Mixed: Typica, Bourbon, Catimor',\n",
+    "        'mix','Mix Variety','Blend','74110、74112、74165',\n",
+    "        'Typica+ Geisha','Caturra/Catuai','Castillo/Catura','CASTILLO-CATURRA-COLOMBIA',\n",
+    "        'USDA 762 & Kartika2','Catimor mix and varieties','Arabica(mixed varieties)'\n",
+    "    ], 'Mixed'),\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 229,
+   "id": "f4da29cc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['Variety.Simplified'] = (df['Variety'].map(map_varaiety).fillna('Other').astype(object))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 230,
+   "id": "9296046a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Variety.Simplified\n",
+       "Foundational/Mutation    778\n",
+       "Hybrid                   223\n",
+       "Other                    169\n",
+       "Specialty Regional        78\n",
+       "SL-Selection              67\n",
+       "Geisha                    63\n",
+       "Mixed                     23\n",
+       "Ethiopian Heirloom        12\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 230,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df['Variety.Simplified'].value_counts())"
    ]
   }
  ],
