--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -8398,12 +8398,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "id": "f5de9f13",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('/Users/admin/Documents/PICT/Year 1 Sem 1/ICT/Data Mining and Warehousing/Project/Brewlytics/data/preprocessed_data.csv', index=False)"
+    "df.to_csv('/data/preprocessed_data.csv', index=False)"
    ]
   }
  ],
