1. preprocessed file imported and type convertion completed

--- a/src/coffee filter/coffee_filter.ipynb
+++ b/src/coffee filter/coffee_filter.ipynb
@@ -8405,6 +8405,397 @@
    "source": [
     "df.to_csv('/data/preprocessed_data.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8620fb7",
+   "metadata": {},
+   "source": [
+    "# EDA"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0413c404",
+   "metadata": {},
+   "source": [
+    "## import file and parse data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fad09410",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coffee_df = pd.read_csv('data/preprocessed_data.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 254,
+   "id": "01e5ecf7",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Owner                    object\n",
+       "Country.of.Origin        object\n",
+       "Region                   object\n",
+       "Number.of.Bags            int64\n",
+       "Bag.Weight               object\n",
+       "In.Country.Partner       object\n",
+       "Harvest.Year              int64\n",
+       "Grading.Date             object\n",
+       "Variety                  object\n",
+       "Processing.Method        object\n",
+       "Aroma                   float64\n",
+       "Flavor                  float64\n",
+       "Aftertaste              float64\n",
+       "Acidity                 float64\n",
+       "Body                    float64\n",
+       "Balance                 float64\n",
+       "Uniformity              float64\n",
+       "Clean.Cup               float64\n",
+       "Sweetness               float64\n",
+       "Cupper.Points           float64\n",
+       "Total.Cup.Points        float64\n",
+       "Moisture                float64\n",
+       "Category.One.Defects      int64\n",
+       "Quakers                 float64\n",
+       "Color                    object\n",
+       "Category.Two.Defects      int64\n",
+       "altitude_low_meters     float64\n",
+       "altitude_high_meters    float64\n",
+       "altitude_mean_meters    float64\n",
+       "Variety.Simplified       object\n",
+       "Bag.Weight.Kg           float64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(coffee_df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 255,
+   "id": "d0a74e5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "coffee_df['Grading.Date'] = pd.to_datetime(coffee_df['Grading.Date'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 256,
+   "id": "e633abf4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Owner                           object\n",
+       "Country.of.Origin               object\n",
+       "Region                          object\n",
+       "Number.of.Bags                   int64\n",
+       "Bag.Weight                      object\n",
+       "In.Country.Partner              object\n",
+       "Harvest.Year                     int64\n",
+       "Grading.Date            datetime64[ns]\n",
+       "Variety                         object\n",
+       "Processing.Method               object\n",
+       "Aroma                          float64\n",
+       "Flavor                         float64\n",
+       "Aftertaste                     float64\n",
+       "Acidity                        float64\n",
+       "Body                           float64\n",
+       "Balance                        float64\n",
+       "Uniformity                     float64\n",
+       "Clean.Cup                      float64\n",
+       "Sweetness                      float64\n",
+       "Cupper.Points                  float64\n",
+       "Total.Cup.Points               float64\n",
+       "Moisture                       float64\n",
+       "Category.One.Defects             int64\n",
+       "Quakers                        float64\n",
+       "Color                           object\n",
+       "Category.Two.Defects             int64\n",
+       "altitude_low_meters            float64\n",
+       "altitude_high_meters           float64\n",
+       "altitude_mean_meters           float64\n",
+       "Variety.Simplified              object\n",
+       "Bag.Weight.Kg                  float64\n",
+       "dtype: object"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "display(coffee_df.dtypes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 258,
+   "id": "81752f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "categorical_cols = [\n",
+    "    'Owner', 'Country.of.Origin', 'Region',\n",
+    "    'Variety', 'Processing.Method', 'Color',\n",
+    "    'Variety.Simplified', 'Harvest.Year'\n",
+    "]\n",
+    "\n",
+    "for col in categorical_cols:\n",
+    "    df[col] = df[col].astype('category')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 259,
+   "id": "9e13d53b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Column</th>\n",
+       "      <th>Dtype</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Owner</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Country.of.Origin</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Region</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Number.of.Bags</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bag.Weight</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>In.Country.Partner</td>\n",
+       "      <td>object</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>Harvest.Year</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Grading.Date</td>\n",
+       "      <td>datetime64[ns]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Variety</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Processing.Method</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Aroma</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Flavor</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Aftertaste</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Acidity</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Body</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Balance</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>Uniformity</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>Clean.Cup</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>Sweetness</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td>Cupper.Points</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20</th>\n",
+       "      <td>Total.Cup.Points</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21</th>\n",
+       "      <td>Moisture</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22</th>\n",
+       "      <td>Category.One.Defects</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>23</th>\n",
+       "      <td>Quakers</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>24</th>\n",
+       "      <td>Color</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25</th>\n",
+       "      <td>Category.Two.Defects</td>\n",
+       "      <td>int64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>altitude_low_meters</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27</th>\n",
+       "      <td>altitude_high_meters</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>28</th>\n",
+       "      <td>altitude_mean_meters</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29</th>\n",
+       "      <td>Variety.Simplified</td>\n",
+       "      <td>category</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>Bag.Weight.Kg</td>\n",
+       "      <td>float64</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  Column           Dtype\n",
+       "0                  Owner        category\n",
+       "1      Country.of.Origin        category\n",
+       "2                 Region        category\n",
+       "3         Number.of.Bags           int64\n",
+       "4             Bag.Weight          object\n",
+       "5     In.Country.Partner          object\n",
+       "6           Harvest.Year        category\n",
+       "7           Grading.Date  datetime64[ns]\n",
+       "8                Variety        category\n",
+       "9      Processing.Method        category\n",
+       "10                 Aroma         float64\n",
+       "11                Flavor         float64\n",
+       "12            Aftertaste         float64\n",
+       "13               Acidity         float64\n",
+       "14                  Body         float64\n",
+       "15               Balance         float64\n",
+       "16            Uniformity         float64\n",
+       "17             Clean.Cup         float64\n",
+       "18             Sweetness         float64\n",
+       "19         Cupper.Points         float64\n",
+       "20      Total.Cup.Points         float64\n",
+       "21              Moisture         float64\n",
+       "22  Category.One.Defects           int64\n",
+       "23               Quakers         float64\n",
+       "24                 Color        category\n",
+       "25  Category.Two.Defects           int64\n",
+       "26   altitude_low_meters         float64\n",
+       "27  altitude_high_meters         float64\n",
+       "28  altitude_mean_meters         float64\n",
+       "29    Variety.Simplified        category\n",
+       "30         Bag.Weight.Kg         float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "dtypes_df = df.dtypes.reset_index()\n",
+    "dtypes_df.columns = ['Column', 'Dtype']\n",
+    "display(dtypes_df)"
+   ]
   }
  ],
  "metadata": {
